k3s/homarr/service.yml
kind: Service
apiVersion: v1
metadata:
  name: homarr-int-svc
  namespace: homarr
spec:
  type: ClusterIP
  selector:
    app: homarr
  ports:
  - name: http
    port: 7575
    protocol: TCP
    targetPort: 7575
