k3s/homarr/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr-ing-traefik
  namespace: homarr
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: "bird.nest"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homarr-int-svc
            port:
              number: 7575
